fixing styles and aligning items

--- a/src/app/components/add-office/add-office.component.css
+++ b/src/app/components/add-office/add-office.component.css
@@ -1,10 +1,9 @@
-
 .content {
   display: flex;
-  margin:auto 25%;
-}
-
-#officeProfile {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1ch;
   text-align: center;
 }
 
@@ -17,19 +16,20 @@
 }
 
 .colour-scheme {
-  margin-top:20px;
+  margin-top: 20px;
   display: flex;
   flex-direction: row;
   justify-content: center;
-  
 }
+
 .colour-row-2 {
   display: flex;
-  margin:20px;
+  margin: 20px;
   justify-content: center;
 }
-.dot{
-  margin-left:50px;
+
+.dot {
+  margin-left: 50px;
   height: 25px;
   width: 25px;
   border-radius: 13px;
@@ -45,56 +45,57 @@
 }
 
 .colour-1 {
-  background-color: #FFBE0B;
+  background-color: #ffbe0b;
 }
 
 .colour-2 {
-  background-color: #FF9B71;
+  background-color: #ff9b71;
 }
 
 .colour-3 {
-  background-color: #FB5607;
+  background-color: #fb5607;
 }
 .colour-4 {
-  background-color: #97512C;
+  background-color: #97512c;
 }
 .colour-5 {
-  background-color:  #DBBADD;
+  background-color: #dbbadd;
 }
 .colour-6 {
-  background-color: #FF006E;
+  background-color: #ff006e;
 }
 .colour-7 {
-  background-color: #A9F0D1;
+  background-color: #a9f0d1;
 }
 .colour-8 {
-  background-color: #00B402;
+  background-color: #00b402;
 }
 .colour-9 {
-  background-color: #489DDA;
+  background-color: #489dda;
 }
 .colour-10 {
-  background-color: #0072E8;
+  background-color: #0072e8;
 }
 .colour-11 {
-  background-color: #8338EC;
+  background-color: #8338ec;
 }
 
 button {
   width: 232px;
   margin: 1rem;
   height: 2.5rem;
-  background: #489DDA;
+  background: #489dda;
   color: white;
-  border:none;
+  border: none;
   border-radius: 20px;
 }
+
 button:disabled {
   background: #ccc;
-  cursor:not-allowed;
+  cursor: not-allowed;
 }
 
 button {
-  background: #489DDA;
+  background: #489dda;
   cursor: pointer;
 }
